@@ -95,6 +95,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   cell is now treated as a linestart.
 * Custom editintro's using the editintro url parameter will no longer show <noinclude>
   sections on pages they are included on.
+* (bug 26449) Keep underlines from headings outside of tables and thumbs by
+  adding overflow:hidden to h1,h2,h3,h4,h5,h6 (also fixes editsection bunching).
+* (bug 26708) Remove background-color:white from tables in Monobook and Vector.
 
 === API changes in 1.18 ===
 * (bug 26339) Throw warning when truncating an overlarge API result
